css/layout.css
/* ... */
[class*=ui-icon-]:after {
  background-size: contain; }

.ui-btn-icon-left:after, .ui-btn-icon-right:after, .ui-btn-icon-top:after, .ui-btn-icon-bottom:after, .ui-btn-icon-notext:after {
  width: 28px; }

.ui-icon-carat_down:after {
  content: "\f0d7";
  color: #1b78b3;
  font: normal normal normal 22px/1 FontAwesome;
  width: auto; }

.ui-popup-active {
  background-color: #fff; }

.inline {
  display: inline-block; }

div[data-role="popup"] > a.ui-btn {
  padding: 0;
  background: transparent !important;
  border: none !important; }

.text_center {
  text-align: center !important; }

.inline_block {
  display: inline-block; }

div.ui-tabs > .ui-navbar > .ui-tabs-nav > li {
  padding: 0 7px; }
  div.ui-tabs > .ui-navbar > .ui-tabs-nav > li :nth-child(2) {
    margin-left: 20px; }
  div.ui-tabs > .ui-navbar > .ui-tabs-nav > li a {
    text-transform: none;
    font-size: 100%;
    border-radius: 10px;
    font-weight: lighter;
    padding: 7px 0 7px 13px; }

body li[role=tab]:not(.ui-tabs-active) {
  border: none; }
  body li[role=tab]:not(.ui-tabs-active) a {
    background-color: transparent;
    border: none; }

ul.ui-tabs-nav {
  padding: 10px 80px;
  background-color: #1b78b3; }

.box {
  background-color: white;
  color: black;
  border-radius: 5px;
  box-shadow: 3px 3px 3px #666; }
  .box * {
    background-color: white;
    color: black;
    box-sizing: border-box; }
  .box .input-row {
    margin-bottom: 12px;
    margin-top: 12px; }
  .box .input-row:last-child, .box .input-row:nth-child(4) {
    border-bottom: none; }
  .box .input-row label, .box input {
    /*     font-size: 12px */ }
  .box .box-center {
    position: absolute;
    text-align: center;
    z-index: 1000;
    background-color: white;
    color: black !important;
    bottom: 100px;
    width: 90%;
    left: 5%;
    opacity: 1;
    padding: 10px; }

#route_info .box_title {
  width: auto;
  background-color: #233b64;
  text-align: center;
  border-radius: 5px 5px 0 0;
  padding: 12px;
  color: white; }

#route_info label {
  width: 20%;
  color: #999;
  margin: 0; }

#route_info .point {
  width: 5%;
  padding-top: 12px;
  text-align: center;
  position: absolute;
  font-size: 90%; }

#route_info input {
  width: 75%;
  padding-left: 5px;
  height: 41px;
  padding-right: 16px; }

#route_info .connector {
  margin: 0 auto;
  display: block;
  width: 1px;
  height: 34px;
  background-color: #aaa; }

.connector-wrapper {
  position: absolute;
  top: 90px;
  width: 5%;
  height: 30px;
  margin-left: 20%;
  z-index: 11;
  background-color: white; }

.box.float_bottom {
  height: auto;
  position: fixed;
  bottom: 8px;
  left: 4%;
  width: 92%;
  z-index: 2; }

.input-row {
  margin-bottom: 12px;
  border-bottom: 1px solid #b2b1b1;
  height: 50px;
  overflow: hidden; }
  .input-row label {
    float: left;
    width: 25%;
    padding: 10px 7px;
    height: 36px;
    text-overflow: ellipsis; }
  .input-row input {
    float: right;
    width: 75%;
    padding-left: 0;
    margin-bottom: 0;
    border: 0; }

.text_no_shadow {
  text-shadow: none; }

html, body, [data-role=tabs] {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0; }

[data-role=tabs] {
  background-color: #000; }

#map, #list {
  min-height: 100%;
  position: relative;
  width: 100%;
  height: 100%;
  text-shadow: none; }

#canvas {
  width: 100%;
  height: 300px;
  min-height: 100%;
  display: block;
  position: relative;
  overflow: hidden; }

[data-role=footer] {
  position: absolute;
  margin: 0;
  padding: 0;
  bottom: 0;
  width: 100%;
  height: 40px; }

.info_window {
  max-width: 250px;
  overflow: scroll; }

.fc-row td.has_log {
  background-color: #e8fde7;
  text-shadow: none; }

body.offset_input {
  position: relative;
  top: -72px; }

div.banner > a.ui-btn {
  border: none; }

.ui-header .ui-title, .ui-footer .ui-title {
  margin: 0 20%; }

#popup_menu a {
  padding-left: 12px;
  padding-right: 12px; }

.ui-popup > .ui-btn-left, .ui-popup > .ui-btn-right {
  top: 3px; }

.ui-popup > .ui-btn-right {
  right: 3px; }

.trip_table_wrapper {
  background-color: #cee3f6;
  font-size: 80%;
  width: 100%; }
  .trip_table_wrapper div.TripHeader {
    padding: 8px;
    font-size: 15px;
    background-color: #193564;
    color: white; }
  .trip_table_wrapper table {
    padding-left: 4px;
    padding-right: 8px; }
    .trip_table_wrapper table td {
      display: inline-block; }
  .trip_table_wrapper .ui-input-text {
    margin-top: .5em;
    margin-bottom: .5em;
    width: 100%; }
    .trip_table_wrapper .ui-input-text input {
      line-height: 30px; }

tr.leg > td.header {
  width: 100%;
  border-bottom: 2px solid black; }

tbody.trip_table {
  text-shadow: none; }

div.ui-header .ui-btn-left {
  height: 100%;
  top: 0; }

.cur_date_mdy {
  font-weight: bold; }

table.ui-table-reflow {
  width: 100%; }

ul.ui-listview > li.ui-first-child > a.ui-btn {
  border-top: none !important; }

.ui-btn-icon-left:after, .ui-btn-icon-right:after, .ui-btn-icon-top:after, .ui-btn-icon-bottom:after, .ui-btn-icon-notext:after {
  height: 18px; }

#commute_log_entry_page .ui-btn-icon-left:after, #commute_log_entry_page .ui-btn-icon-right:after, #commute_log_entry_page .ui-btn-icon-top:after, #commute_log_entry_page .ui-btn-icon-bottom:after, #commute_log_entry_page .ui-btn-icon-notext:after {
  width: 14px; }

#commute_log_entry_page .ui-page-theme-b .ui-btn, #commute_log_entry_page .ui-bar-b .ui-btn, #commute_log_entry_page .ui-body-b .ui-btn, #commute_log_entry_page .ui-group-theme-b .ui-btn, #commute_log_entry_page .ui-btn.ui-btn-b, #commute_log_entry_page .ui-page-theme-b .ui-btn:visited,
#commute_log_entry_page button.ui-btn {
  border: none; }

.ui-dialog-contain .ui-btn {
  border: none; }

.fc .add_edit_btn {
  width: 80%;
  padding: 0 0.2em 0 0.2em;
  font-size: 90%;
  text-align: center; }

.fc-day-top.fc-force_show {
  opacity: 1; }

/*# sourceMappingURL=layout.css.map */

